# HPE-45000-tape-drive-controller

./: .gitignore  README.md  pyproject.toml  requirements.txt
tape_drive_controller/: __init__.py  __main__.py
tape_drive_controller/tape/: __init__.py  backup.py  capacity.py  diagnostics.py  list_devices.py  ltfs.py
tape_drive_controller/ui/: __init__.py  app.py
tests/: __init__.py  test_tape.py
