[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tape-drive-controller"
version = "0.1.0"
description = "Desktop app for Linux to back up directories to an LTO tape drive"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyGObject>=3.42.0",
    "pytest>=7.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
